SOLR-15907: Establish jwt-auth module